Changes and bugs fixed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.application.name=Veterinary-App
 
+spring.services.animalApi.save=http://localhost:8083/Animals/save/{animalId}
+spring.services.animalApi.get=http://localhost:8083/Animals
+spring.services.animalApi.getByName=http://localhost:8083/Animal
+
+spring.services.veterinaryApi.save=http://localhost:8082/Vete/save/{veteid}
+spring.services.veterinaryApi.get=http://localhost:8082/Vete
